# sphinx-exercise

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  python-publish.yml
docs/: requirements.txt
docs/_static/: custom.css
docs/source/: conf.py  developer-design.md  developer.md  index.md  install.md  syntax.md  testing.md
sphinx_exercise/: __init__.py  _compat.py  directive.py  latex.py  local_nodes.py  nodes.py  post_transforms.py  role.py  transforms.py  utils.py
sphinx_exercise/_static/: exercise.css
sphinx_exercise/translations/: README.md  _convert.py
tests/: conftest.py  test_build.py  test_duplicatelabel.py  test_exercise.py  test_exercise_references.py  test_exercise_style.py  test_gateddirective.py  test_hiddendirective.py  test_latex.py  test_order_validation.py  test_solution.py  test_solution_references.py  test_style_solution_after_exercise.py  test_translation.py
tests/test_exercise/: _enum_duplicate_label.xml  _enum_mathtitle_label.html  _enum_mathtitle_label.xml  _enum_notitle_label.html  _enum_notitle_label.xml  _enum_numref_mathtitle.html  _enum_numref_mathtitle.xml  _enum_numref_notitle.html  _enum_numref_notitle.xml  _enum_numref_placeholders.html  _enum_numref_title.html  _enum_numref_title.xml  _enum_ref_mathtitle.html  _enum_ref_mathtitle.xml  _enum_ref_notitle.html  _enum_ref_notitle.xml  _enum_ref_title.html  _enum_ref_title.xml  _enum_title_class_label.html  _enum_title_class_label.xml  _enum_title_nolabel.html  _enum_title_nolabel.xml  _exercise_labeled_titled_with_classname.html  _exercise_nonumber.html  _exercise_title_with_inline_math.html  _exercise_unlabeled_math.html  _exercise_with_labeled_math.html  _unenum_mathtitle_label.html  _unenum_mathtitle_label.xml  _unenum_notitle_label.html  _unenum_notitle_label.xml  _unenum_numref_mathtitle.html  _unenum_numref_mathtitle.xml  _unenum_numref_notitle.html  _unenum_numref_notitle.xml  _unenum_numref_title.html  _unenum_numref_title.xml  _unenum_ref_mathtitle.html  _unenum_ref_notitle.html  _unenum_ref_title.html  (+4 more)
tests/test_exercise_references/: _enum_numref_mathtitle.sphinx7.html  _enum_numref_mathtitle.sphinx8.html  _enum_numref_notitle.html  _enum_numref_notitle.sphinx7.html  _enum_numref_notitle.sphinx8.xml  _enum_numref_placeholders.html  _enum_numref_placeholders.xml  _enum_numref_title.html  _enum_ref_mathtitle.sphinx8.html  _enum_ref_notitle.html  _enum_ref_title.html  _unenum_numref_mathtitle.sphinx8.html  _unenum_numref_mathtitle.xml  _unenum_numref_notitle.html  _unenum_numref_notitle.sphinx8.1.html  _unenum_numref_notitle.xml  _unenum_numref_title.html  _unenum_numref_title.xml  _unenum_ref_mathtitle.html  _unenum_ref_mathtitle.xml  _unenum_ref_notitle.sphinx7.html  _unenum_ref_notitle.sphinx8.1.html  _unenum_ref_notitle.xml  _unenum_ref_title.html  _unenum_ref_title.sphinx8.html  _unenum_ref_title.xml
tests/test_gateddirective/: exercise-gated-0.html  exercise-gated-0.sphinx8.html  exercise-gated-1.html  exercise-gated-1.sphinx8.html  exercise-gated.sphinx8.1.xml  exercise-gated.xml  solution-0.html  solution-1.html  solution-2.html  solution-exercise-0.html  solution-exercise-0.sphinx4.html  solution-exercise-0.sphinx5.html  solution-exercise-0.sphinx7.html  solution-exercise-0.sphinx8.1.html  solution-exercise-0.sphinx8.html  solution-exercise-1.html  solution-exercise-1.sphinx4.html  solution-exercise-1.sphinx7.html  solution-exercise-1.sphinx8.1.html  solution-exercise-1.sphinx8.html  solution-exercise-gated-0.html  solution-exercise-gated-0.sphinx4.html  solution-exercise-gated-0.sphinx5.html  solution-exercise-gated-0.sphinx7.html  solution-exercise-gated-0.sphinx8.html  solution-exercise-gated-1.html  solution-exercise-gated-1.sphinx4.html  solution-exercise-gated-1.sphinx5.html  solution-exercise-gated-1.sphinx7.html  solution-exercise-gated-1.sphinx8.1.html  (+11 more)
(+213 files in other folders)
