[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-exercise"
dynamic = ["version"]
description = "A Sphinx extension for producing exercises and solutions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "QuantEcon", email = "admin@quantecon.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "sphinx-book-theme",
    "sphinx>=6.1",
]

[project.optional-dependencies]
all = [
    "sphinx-exercise[code_style]",
    "sphinx-exercise[rtd]",
    "sphinx-exercise[testing]"
]
code_style = [
    "black",
    "flake8<3.8.0,>=3.7.0",
    "pre-commit",
]
rtd = [
    "myst-nb~=1.0.0",
    "sphinx-book-theme",
    "sphinx_togglebutton",
    "sphinx>=6.1,<9",
]
testing = [
    "beautifulsoup4",
    "coverage",
    "matplotlib>=3.8",
    "myst-nb~=1.0.0",
    "pytest-cov",
    "pytest-regressions",
    "pytest~=8.0.0",
    "sphinx>=6.1,<9",
    "texsoup",
    "defusedxml", # Required by sphinx-testing
]

[project.urls]
Homepage = "https://github.com/executablebooks/sphinx-exercise"
Source = "https://github.com/executablebooks/sphinx-exercise"
Tracker = "https://github.com/executablebooks/sphinx-exercise/issues"

[tool.hatch.version]
path = "sphinx_exercise/__init__.py"
